# gitool

./: Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  git.rs  highlight.rs  main.rs  types.rs
src/app/: branch_ops.rs  dispatch.rs  git_ops.rs  mod.rs  navigation.rs  state.rs  undo.rs  watcher.rs
src/git/: diff.rs  log.rs  mod.rs  ops.rs  scan.rs  status.rs
src/ui/: blame.rs  branches.rs  command_log.rs  commit_log.rs  commits.rs  confirm.rs  detail.rs  diff.rs  files.rs  log_view.rs  mod.rs  modal.rs  preview.rs  repo_list.rs  stash_panel.rs
