[package]
name = "gitool"
version = "0.1.0"
edition = "2024"
description = "A lazygit-inspired TUI for managing multiple git repositories"
license = "MIT"
repository = "https://github.com/monal94/gitool"
keywords = ["git", "tui", "workspace", "multi-repo"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
dirs = "6"
notify = "7"
notify-debouncer-mini = "0.5"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
rayon = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
